--- a/src/index.css
+++ b/src/index.css
@@ -49,22 +49,20 @@ input[type=number], select {
   border-radius: 4px;
   box-sizing: border-box;
 }
-
 input[type=submit] {
   width: 100%;
-  background-color: #407be9;
-  color: white;
+  background-color: #35d6e5;
+  color: black;
   padding: 14px 20px;
   margin: 28px 0px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
 }
-
 input[type=submit]:hover {
-  background-color: #54c261;
+  background-color: #35d6e56b;
+  color: black;
 }       
-
 .F {
   border: none;
   border-radius: 5px;
@@ -72,16 +70,28 @@ input[type=submit]:hover {
   padding: 20px;
   margin: 20px 150px 20px 150px;
 }
-
 input[required]:after {
   content:" *";
   color: red;
 }
-
 .FF {
   border: none;
   border-radius: 5px;
   display: flex;
   padding: 0px 80px;
-  margin: 0px 150px 20px 150px;
+  margin: 20px 150px 20px 150px;
+}
+.link {
+  color: #35d6e5;
+  text-decoration: none;
+}
+.link:visited {
+  color: red;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+a:active {
+  text-decoration: solid;
 }
