--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,30 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
-
+.Backg{
+  background: url("https://wallpaperaccess.com/full/1105186.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* width: 100%; */
+  height: 100%;
+}
+.Backgg{
+  background: url("D:\git\Shopping-app\img\3949088.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* width: 100%; */
+  height: 100%;
+}
+.Crud{
+  padding:50px;
+}
+.Table{
+  padding: 50px;
+}
 input[type=text], select {
   width: 100%;
   padding: 12px 20px;
@@ -60,7 +77,7 @@ input[type=submit] {
   cursor: pointer;
 }
 input[type=submit]:hover {
-  background-color: #35d6e56b;
+  background-color: #ce80df;
   color: black;
 }       
 .F {
@@ -68,7 +85,7 @@ input[type=submit]:hover {
   border-radius: 5px;
   background-color: #b1abab;
   padding: 20px;
-  margin: 20px 150px 20px 150px;
+  margin: 0px 300px 20px 300px;
 }
 input[required]:after {
   content:" *";
@@ -79,19 +96,162 @@ input[required]:after {
   border-radius: 5px;
   display: flex;
   padding: 0px 80px;
-  margin: 20px 150px 20px 150px;
+  margin: 0px 300px 20px 300px;
 }
 .link {
   color: #35d6e5;
   text-decoration: none;
 }
-.link:visited {
-  color: red;
-  text-decoration: none;
-}
 a:hover {
-  text-decoration: underline;
+  /* text-decoration: underline; */
+  font-weight:bold ;
 }
 a:active {
   text-decoration: solid;
+}
+.success{
+  color: green;
+}
+.error{
+  color: red;
+}
+.reg-btn{
+  width: 100%;
+  background-color: #35d6e5;
+  color: black;
+  padding: 14px 20px;
+  margin: 28px 0px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.Mainbl{
+  border: none;
+  border-radius: 5px;
+  /* background-color: #35d6e5; */
+  padding: 50px;
+  margin: 0px 0px 0px 0px;
+}
+.Secpurl{
+  border: none;
+  border-radius: 5px;
+  background-color: #35d6e5;
+  padding: 50px;
+  display: flex;
+  grid-template-columns: 1fr 1fr 1fr; 
+  gap: 10px 1em; 
+  justify-content: space-evenly;
+}
+.Boxes{
+  border: none;
+  border-radius: 5px;
+  background-color: #ce80df;
+  text-align:  center;
+   padding: 50px;
+  display: flex;  
+}
+.Filepo{
+  background-color: #ce80df;
+  border: 2px;
+}
+.input-group-append{
+  margin: auto;
+}
+.switch {
+  position: relative;
+  display: block;
+  vertical-align: top;
+  width: 100px;
+  height: 30px;
+  padding: 3px;
+  margin: 0 10px 10px 0;
+  background: linear-gradient(to bottom, #eeeeee, #FFFFFF 25px);
+  background-image: -webkit-linear-gradient(top, #eeeeee, #FFFFFF 25px);
+  border-radius: 18px;
+  box-shadow: inset 0 -1px white, inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  cursor: pointer;
+}
+.switch-input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
+.switch-label {
+  position: relative;
+  display: block;
+  height: inherit;
+  font-size: 10px;
+  text-transform: uppercase;
+  background: #eceeef;
+  border-radius: inherit;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.15);
+}
+.switch-label:before, .switch-label:after {
+  position: absolute;
+  top: 50%;
+  margin-top: -.5em;
+  line-height: 1;
+  -webkit-transition: inherit;
+  -moz-transition: inherit;
+  -o-transition: inherit;
+  transition: inherit;
+}
+.switch-label:before {
+  content: attr(data-off);
+  right: 11px;
+  color: #aaaaaa;
+  text-shadow: 0 1px rgba(255, 255, 255, 0.5);
+}
+.switch-label:after {
+  content: attr(data-on);
+  left: 11px;
+  color: #FFFFFF;
+  text-shadow: 0 1px rgba(0, 0, 0, 0.2);
+  opacity: 0;
+}
+.switch-input:checked ~ .switch-label {
+  background: #35d6e5;
+  border-color: #35d6e5;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15), inset 0 0 3px rgba(0, 0, 0, 0.2);
+}
+.switch-input:checked ~ .switch-label:before {
+  opacity: 0;
+}
+.switch-input:checked ~ .switch-label:after {
+  opacity: 1;
+}
+.switch-handle {
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  width: 28px;
+  height: 28px;
+  background: linear-gradient(to bottom, #FFFFFF 40%, #f0f0f0);
+  background-image: -webkit-linear-gradient(top, #FFFFFF 40%, #f0f0f0);
+  border-radius: 100%;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+}
+.switch-handle:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -6px 0 0 -6px;
+  width: 12px;
+  height: 12px;
+  background: linear-gradient(to bottom, #eeeeee, #FFFFFF);
+  background-image: -webkit-linear-gradient(top, #eeeeee, #FFFFFF);
+  border-radius: 6px;
+  box-shadow: inset 0 1px rgba(0, 0, 0, 0.02);
+}
+.switch-input:checked ~ .switch-handle {
+  left: 74px;
+  box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.2);
+}
+.switch-label, .switch-handle {
+  transition: All 0.3s ease;
+  -webkit-transition: All 0.3s ease;
+  -moz-transition: All 0.3s ease;
+  -o-transition: All 0.3s ease;
 }
