--- a/src/index.css
+++ b/src/index.css
@@ -6,31 +6,38 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-.Backg{
+
+.Backg {
   background: url("https://wallpaperaccess.com/full/1105186.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   /* width: 100%; */
   height: 100%;
 }
-.Backgg{
+
+.Backgg {
   background: url("D:\git\Shopping-app\img\3949088.png");
   background-size: cover;
   background-repeat: no-repeat;
   /* width: 100%; */
   height: 100%;
 }
-.Crud{
-  padding:50px;
-}
-.Table{
+
+.Crud {
   padding: 50px;
 }
-input[type=text], select {
+
+.Table {
+  padding: 50px;
+}
+
+input[type=text],
+select {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -39,7 +46,9 @@ input[type=text], select {
   border-radius: 4px;
   box-sizing: border-box;
 }
-input[type=email], select {
+
+input[type=email],
+select {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -48,7 +57,9 @@ input[type=email], select {
   border-radius: 4px;
   box-sizing: border-box;
 }
-input[type=password], select {
+
+input[type=password],
+select {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -57,7 +68,9 @@ input[type=password], select {
   border-radius: 4px;
   box-sizing: border-box;
 }
-input[type=number], select {
+
+input[type=number],
+select {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -66,6 +79,7 @@ input[type=number], select {
   border-radius: 4px;
   box-sizing: border-box;
 }
+
 input[type=submit] {
   width: 100%;
   background-color: #35d6e5;
@@ -76,10 +90,12 @@ input[type=submit] {
   border-radius: 4px;
   cursor: pointer;
 }
+
 input[type=submit]:hover {
   background-color: #ce80df;
   color: black;
-}       
+}
+
 .F {
   border: none;
   border-radius: 5px;
@@ -87,10 +103,12 @@ input[type=submit]:hover {
   padding: 20px;
   margin: 0px 300px 20px 300px;
 }
+
 input[required]:after {
-  content:" *";
+  content: " *";
   color: red;
 }
+
 .FF {
   border: none;
   border-radius: 5px;
@@ -98,24 +116,30 @@ input[required]:after {
   padding: 0px 80px;
   margin: 0px 300px 20px 300px;
 }
+
 .link {
   color: #35d6e5;
   text-decoration: none;
 }
+
 a:hover {
   /* text-decoration: underline; */
-  font-weight:bold ;
+  font-weight: bold;
 }
+
 a:active {
   text-decoration: solid;
 }
-.success{
+
+.success {
   color: green;
 }
-.error{
+
+.error {
   color: red;
 }
-.reg-btn{
+
+.reg-btn {
   width: 100%;
   background-color: #35d6e5;
   color: black;
@@ -125,38 +149,44 @@ a:active {
   border-radius: 4px;
   cursor: pointer;
 }
-.Mainbl{
+
+.Mainbl {
   border: none;
   border-radius: 5px;
   /* background-color: #35d6e5; */
   padding: 50px;
   margin: 0px 0px 0px 0px;
 }
-.Secpurl{
+
+.Secpurl {
   border: none;
   border-radius: 5px;
   background-color: #35d6e5;
   padding: 50px;
   display: flex;
-  grid-template-columns: 1fr 1fr 1fr; 
-  gap: 10px 1em; 
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px 1em;
   justify-content: space-evenly;
 }
-.Boxes{
+
+.Boxes {
   border: none;
   border-radius: 5px;
   background-color: #ce80df;
-  text-align:  center;
-   padding: 50px;
-  display: flex;  
+  text-align: center;
+  padding: 50px;
+  display: flex;
 }
-.Filepo{
+
+.Filepo {
   background-color: #ce80df;
   border: 2px;
 }
-.input-group-append{
+
+.input-group-append {
   margin: auto;
 }
+
 .switch {
   position: relative;
   display: block;
@@ -171,12 +201,14 @@ a:active {
   box-shadow: inset 0 -1px white, inset 0 1px 1px rgba(0, 0, 0, 0.05);
   cursor: pointer;
 }
+
 .switch-input {
   position: absolute;
   top: 0;
   left: 0;
   opacity: 0;
 }
+
 .switch-label {
   position: relative;
   display: block;
@@ -187,7 +219,9 @@ a:active {
   border-radius: inherit;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.15);
 }
-.switch-label:before, .switch-label:after {
+
+.switch-label:before,
+.switch-label:after {
   position: absolute;
   top: 50%;
   margin-top: -.5em;
@@ -197,12 +231,14 @@ a:active {
   -o-transition: inherit;
   transition: inherit;
 }
+
 .switch-label:before {
   content: attr(data-off);
   right: 11px;
   color: #aaaaaa;
   text-shadow: 0 1px rgba(255, 255, 255, 0.5);
 }
+
 .switch-label:after {
   content: attr(data-on);
   left: 11px;
@@ -210,17 +246,21 @@ a:active {
   text-shadow: 0 1px rgba(0, 0, 0, 0.2);
   opacity: 0;
 }
-.switch-input:checked ~ .switch-label {
+
+.switch-input:checked~.switch-label {
   background: #35d6e5;
   border-color: #35d6e5;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15), inset 0 0 3px rgba(0, 0, 0, 0.2);
 }
-.switch-input:checked ~ .switch-label:before {
+
+.switch-input:checked~.switch-label:before {
   opacity: 0;
 }
-.switch-input:checked ~ .switch-label:after {
+
+.switch-input:checked~.switch-label:after {
   opacity: 1;
 }
+
 .switch-handle {
   position: absolute;
   top: 4px;
@@ -232,6 +272,7 @@ a:active {
   border-radius: 100%;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
 }
+
 .switch-handle:before {
   content: "";
   position: absolute;
@@ -245,11 +286,14 @@ a:active {
   border-radius: 6px;
   box-shadow: inset 0 1px rgba(0, 0, 0, 0.02);
 }
-.switch-input:checked ~ .switch-handle {
+
+.switch-input:checked~.switch-handle {
   left: 74px;
   box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.2);
 }
-.switch-label, .switch-handle {
+
+.switch-label,
+.switch-handle {
   transition: All 0.3s ease;
   -webkit-transition: All 0.3s ease;
   -moz-transition: All 0.3s ease;
